--- a/backend/package.json
+++ b/backend/package.json
@@ -25,13 +25,19 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@langchain/community": "^1.0.4",
+    "@langchain/core": "^1.0.6",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
     "@types/multer": "^2.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^17.2.3",
+    "langchain": "^1.0.6",
     "openai": "^6.9.1",
     "pg": "^8.16.3",
     "prisma": "^7.0.0",
