--- a/backend/package.json
+++ b/backend/package.json
@@ -25,14 +25,14 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@huggingface/inference": "^4.13.3",
     "@langchain/community": "^1.0.4",
     "@langchain/core": "^1.0.6",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.0.1",
-    "@prisma/adapter-pg": "^7.0.0",
-    "@prisma/client": "^7.0.0",
+    "@prisma/client": "^6.3.1",
     "@types/multer": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -40,7 +40,6 @@
     "langchain": "^1.0.6",
     "openai": "^6.9.1",
     "pg": "^8.16.3",
-    "prisma": "^7.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -61,6 +60,7 @@
     "globals": "^16.0.0",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
+    "prisma": "^6.3.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
