--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -19,6 +19,23 @@ services:
       timeout: 5s
       retries: 5
 
+  chroma:
+    image: chromadb/chroma:latest
+    container_name: realthon-chroma
+    restart: unless-stopped
+    ports:
+      - '${CHROMA_PORT:-8000}:8000'
+    volumes:
+      - chroma_data:/chroma/chroma
+    environment:
+      - IS_PERSISTENT=TRUE
+      - ANONYMIZED_TELEMETRY=FALSE
+    healthcheck:
+      test: ['CMD', 'curl', '-f', 'http://localhost:8000/api/v1/heartbeat']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 volumes:
   postgres_data:
-
+  chroma_data:
